--- a/MasterPol/Pages/EditPartners.xaml
+++ b/MasterPol/Pages/EditPartners.xaml
@@ -16,6 +16,19 @@
         </Grid.RowDefinitions>
 
         <DataGrid Grid.Row="0" Name="DataGridPartner" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <!-- Устанавливаем цвет фона для всех строк -->
+                    <Setter Property="Background" Value="{StaticResource AdditionalBackgroundBrush}" />
+                    <Style.Triggers>
+                        <!-- Меняем фон при наведении -->
+                        <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True">
+                            <Setter Property="Background" Value="{StaticResource AccentColorBrush}" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.RowStyle>
+            
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
                 <DataGridTextColumn Header="Наименование" Binding="{Binding Наименование_партнёра}" Width="150"/>
@@ -23,6 +36,7 @@
                 <DataGridTextColumn Header="Телефон" Binding="{Binding Телефон_партнёра}" Width="100"/>
                 <DataGridTextColumn Header="ИНН" Binding="{Binding ИНН}" Width="100"/>
                 <DataGridTextColumn Header="Рейтинг" Binding="{Binding Ренйтинг}" Width="50"/>
+                <DataGridTextColumn Header="Юридический адрес" Binding="{Binding Юридический_адрес_партнера}" Width="200"/>
 
                 <!-- Столбец для отображения типа партнёра -->
                 <DataGridTextColumn Header="Тип партнёра" Binding="{Binding Partners_type.Тип_Партнёра}" Width="150"/>
@@ -31,7 +45,7 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Name="ButtonEdit" Content="Редактировать"
-                                    Background="{StaticResource AccentColorBrush}" ToolTip="Нажмите, чтобы Редактировать" HorizontalAlignment="Right" Click="ButtonEdit_Click"></Button>
+                            Background="{StaticResource AccentColorBrush}" ToolTip="Нажмите, чтобы Редактировать" HorizontalAlignment="Right" Click="ButtonEdit_Click"></Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -39,6 +53,6 @@
         </DataGrid>
 
         <Button Grid.Row="1" Name="ButtonAdd" Content="Добавить" ToolTip="Нажмите, чтобы добавить партнёра" HorizontalAlignment="Left" Click="ButtonAdd_Click" Background="{StaticResource AccentColorBrush}"/>
-        <Button Grid.Row="1" Name="ButtonDel" Content="Удалить" ToolTip="Нажмите, чтобы удалить партнёра" HorizontalAlignment="Right" Click="ButtonDel_Click" Background="{StaticResource AccentColorBrush}"/>
+        <Button Grid.Row="1" Name="ButtonDel" Content="Удалить" ToolTip="Нажмите, чтобы удалить запись" HorizontalAlignment="Right" Click="ButtonDel_Click"  Background="{StaticResource AccentColorBrush}"/>
     </Grid>
 </Page>
